feat(dash): implement create business
